[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://brick.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
position = Vector2( 400, 300 )
texture = ExtResource( 3 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 400, 550 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Player"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.14902, 0.478431, 0.8, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 300 )
current = true
drag_margin_top = 0.3
drag_margin_bottom = 0.3

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 131.0
margin_bottom = 34.0
text = "Score: 0"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -75.0
margin_right = 125.0
margin_bottom = 75.0

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_top = 30.0
margin_right = 85.0
margin_bottom = 44.0
text = "Game Over"
align = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = -20.0
text = "Restart (R)"

[node name="WinPanel" type="Panel" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0

[node name="WinLabel" type="Label" parent="UI/WinPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 30.0
margin_right = 100.0
margin_bottom = 44.0
text = "Congrats, You Won!"
align = 1

[node name="FinalScoreLabel" type="Label" parent="UI/WinPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 70.0
margin_right = 100.0
margin_bottom = 84.0
text = "Final Score: 0"
align = 1

[node name="RestartButton" type="Button" parent="UI/WinPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = -20.0
text = "Play Again (R)"

[connection signal="pressed" from="UI/GameOverPanel/RestartButton" to="." method="restart_game"]
[connection signal="pressed" from="UI/WinPanel/RestartButton" to="." method="restart_game"] 